--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,14 @@
 # Encryption Service Dependencies
 cryptography>=41.0.0
 
+# Resume Parser & API
+fastapi==0.104.1
+uvicorn==0.24.0
+openai>=1.12.0
+requests==2.31.0
+pydantic>=2.10.0
+httpx>=0.25.0
+
 # Testing
 pytest>=7.4.0
 pytest-cov>=4.1.0
